minor cleanup of clover code
reducing warnings and cleaning imports